refactor: remove health API aliases
